docs: Add JavaDoc documentation to client module files